fix footer spacing

--- a/djangocon_2022/static/sass/_footer.scss
+++ b/djangocon_2022/static/sass/_footer.scss
@@ -23,4 +23,8 @@
     height: 3.875rem;
     background: base.$BgDarkBlue; //#043062;
   }
+  .footer-links {
+    padding-top: 3.875rem;
+    padding-bottom: 1.1875rem;
+  }
 }
